Fix Doxygen footer images being too wide

--- a/doc/custom.css
+++ b/doc/custom.css
@@ -1,4 +1,4 @@
-img {
+img :not(.footer) {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
